--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<li>sas</li>
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Портфоліо Елі</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f3f3f3;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1, h2 {
+      color: #5a2e98;
+    }
+    p {
+      line-height: 1.6;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Привіт! Я Еля</h1>
+    <p>Мені 17 років. Я початківець у веброзробці й цікавлюсь HTML, CSS та створенням простих вебсайтів.</p>
+
+    <h2>Про мене</h2>
+    <p>Я люблю вчитися, експериментувати з кодом і створювати щось нове. Прагну стати професійною фронтенд-розробницею.</p>
+
+    <h2>Мої навички</h2>
+    <ul>
+      <li>HTML5</li>
+      <li>Базовий CSS</li>
+      <li>Використання GitHub</li>
+    </ul>
+
+    <h2>Контакти</h2>
+    <p>Email: <a href="samofalelya@gmail.com">your-email@example.com</a></p>
+    <p>Telegram: <a href="https://t.me/ellyyaa.s">@yourusername</a></p>
+  </div>
+</body>
+</html>
