--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
 <body>
   <div class="container">
     <h1>Привіт! Я Еля</h1>
-    <p>Мені 17 років. Я початківець у веброзробці й цікавлюсь HTML, CSS та створенням простих вебсайтів.</p>
+    <p>Мені 18 років. Я початківець у веброзробці й цікавлюсь HTML, CSS, платформою Figma та створенням простих вебсайтів і макетів.</p>
 
     <h2>Про мене</h2>
-    <p>Я люблю вчитися, експериментувати з кодом і створювати щось нове. Прагну стати професійною фронтенд-розробницею.</p>
+    <p>Я люблю вчитися, експериментувати з кодом і дизайном. Прагну стати розробницею сайтів, макетів та іншого цифрового контенту. Володію англійською мовою на високому рівні та вільно розмовляю російською.</p>
 
     <h2>Мої навички</h2>
     <ul>
       <li>HTML5</li>
       <li>Базовий CSS</li>
+      <li>Платформа Figma</li>
       <li>Використання GitHub</li>
+      <li>Англійська мова — високий рівень</li>
+      <li>Російська мова — вільне володіння</li>
     </ul>
 
     <h2>Контакти</h2>
-    <p>Email: <a href="samofalelya@gmail.com">your-email@example.com</a></p>
-    <p>Telegram: <a href="https://t.me/ellyyaa.s">@yourusername</a></p>
+    <p>Email: <a href="mailto:samofalelya@gmail.com">samofalelya@gmail.com</a></p>
+    <p>Telegram: <a href="https://t.me/ellyyaa.s">@ellyyaa.s</a></p>
   </div>
 </body>
 </html>
