--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Привіт! Я Еля</h1>
-    <p>Мені 18 років. Я початківець у веброзробці й цікавлюсь HTML, CSS, платформою Figma та створенням простих вебсайтів і макетів.</p>
+    <h1>Вітаю,мене звати Самофал Ельвіра Олегівна</h1>
+    <p>Мені 18 років. Я початківець у веброзробці й цікавлюсь HTML, CSS та платформою Figma.</p>
 
     <h2>Про мене</h2>
-    <p>Я люблю вчитися, експериментувати з кодом і дизайном. Прагну стати розробницею сайтів, макетів та іншого цифрового контенту. Володію англійською мовою на високому рівні та вільно розмовляю російською.</p>
+    <p>Я люблю вчитися, експериментувати з кодом і дизайном. Прагну стати розробницею сайтів, макетів та іншого цифрового контенту. <p>
+  
 
     <h2>Мої навички</h2>
     <ul>
