--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 <body>
 
   <header>
-    <h1>Привіт! Я Еля</h1>
+    <h1>Привіт! Я Ельвіра</h1>
     <p>Молодий веб-ентузіаст | Дизайн + Код + Ідеї</p>
   </header>
 
   <div class="container">
     <h2>Про мене</h2>
-    <p>Мені 18 років. Я початківець у веброзробці, люблю створювати сайти та макети у Figma. Прагну стати професійною розробницею вебсайтів, макетів та іншого цифрового контенту. Володію англійською мовою на високому рівні та вільно розмовляю російською.</p>
+    <p>Мені 18 років. Я початківець у веброзробці, люблю створювати сайти та макети у Figma. Прагну стати професійною розробницею вебсайтів та іншого цифрового контенту.</p>
 
     <h2>Мої навички</h2>
     <ul>
@@ -97,8 +97,9 @@
       <li>Базовий CSS</li>
       <li>Платформа Figma</li>
       <li>GitHub (базовий рівень)</li>
-      <li>Англійська — високий рівень</li>
-      <li>Російська — вільне володіння</li>
+      <li>Українська - рідна мова</li>
+      <li>Англійська - високий рівень</li>
+      <li>Російська - вільне володіння</li>
     </ul>
 
     <h2>Контакти</h2>
