--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <div class="contact">
       <a href="mailto:samofalelya@gmail.com">📧 Email</a>
       <a href="https://t.me/ellyyaa.s" target="_blank">💬 Telegram</a>
+      <a href="https://porokhovnichenkoiryna.github.io/learning_git/public/" target="_blank">Назад</a>
     </div>
   </div>
 
