--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
 
     <h2>Контакти</h2>
     <div class="contact">
+      <a href="https://porokhovnichenkoiryna.github.io/learning_git/public/" target="_blank">Повернутися назад</a>
       <a href="mailto:samofalelya@gmail.com">📧 Email</a>
       <a href="https://t.me/ellyyaa.s" target="_blank">💬 Telegram</a>
-      <a href="https://porokhovnichenkoiryna.github.io/learning_git/public/" target="_blank">Назад</a>
+     
     </div>
   </div>
 
