--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
       <li>Російська - вільне володіння</li>
     </ul>
 
-    <h2>Контакти</h2>
-    <div class="contact">
+    <h2>Дії</h2>
+    <div class="Дії">
       <a href="https://porokhovnichenkoiryna.github.io/learning_git/public/" target="_blank">Повернутися назад</a>
+      <a href="https://github.com/gcytch/portfolio">📧 Мій репозиторій</a>
       <a href="mailto:samofalelya@gmail.com">📧 Email</a>
       <a href="https://t.me/ellyyaa.s" target="_blank">💬 Telegram</a>
      
