--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </ul>
 
     <h2>Дії</h2>
-    <div class="Дії">
+    <div class="contact">
       <a href="https://porokhovnichenkoiryna.github.io/learning_git/public/" target="_blank">Повернутися назад</a>
       <a href="https://github.com/gcytch/portfolio">📧 Мій репозиторій</a>
       <a href="mailto:samofalelya@gmail.com">📧 Email</a>
